--- a/packages/client/src/style.css
+++ b/packages/client/src/style.css
@@ -30,3 +30,9 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #aaa;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
